--- a/panel.html
+++ b/panel.html
@@ -91,6 +91,12 @@
     <!-- Settings Tab -->
     <div id="settingsTab" class="tab-content">
       <div class="settings-section">
+        
+        <!-- Unsupported Combination Disclaimer -->
+        <div class="disclaimer-container" id="disclaimerContainer" style="display: none;">
+          <i class="fas fa-exclamation-triangle"></i>
+          <span>Only Java + Selenium and Python + Playwright combinations are currently supported.</span>
+        </div>
        
         <!-- Language Binding -->
         <div class="model-container">
